devel
-----

* Add startup option `--rocksdb.exclusive-writes` to avoid write-write conflicts.

  This options allows for an easier transition from MMFiles to the RocksDB storage
  engine, but comes with a big performance penalty as all collections will be locked
  exclusively for writes.

* Added new timeout option for AQL queries. If a query does not finish execution 
  within the given time in seconds it will be killed.

* Fixed internal issue #4597: rebalanceShards API cannot work on any database
  other than the _system database.

* Fixed UPSERT matching.

  Empty objects in the `UPSERT { ... }` expression will not be omitted anymore:

      db._collection("col").insert({ "find" : "me" });
      db._query(` UPSERT { "find" : "me", "foo" : {} }
                  UPDATE { "foo"  : "not gonna happen" }
                  INSERT { "find" : "me", "foo"  : {} }
                  INTO col
      `)

  This will now correctly insert a document instead of updating the existing,
  that only partially machtes the upsert-expression.

* Fixed issue #10371: K_SHORTEST_PATHS LIMIT 1 can not return the shortest path.
  Now the shortest path is returned as the first one in such queries.

* Added limit for AQL range materialization to prevent out-of-memory errors.

  When materializing ranges created by either the AQL `RANGE` function or by using
  the built-in `..` operator (e.g. `1 .. 1000000`), a check is now performed if
  the range is too big to be materialized. The threshold value is set to 10 million
  members. Ranges with at most that many members can be materialized, ranges with
  more members will fail to materialize and abort the query with the exception
  `number out of range` (error code 1504).

  It is still possible to create ranges with more than 10 million members as long
  as they are not materialized. For example, the following is still valid:

      FOR i IN 1 .. 1000000000 INSERT {_key: CONCAT('test', i)} INTO collection
